<resources>
    <string name="app_name">Trivia Ducks</string>
    <string name="welcome">Welcome</string>
    <string name="reg">Are you already registered? </string>
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="password_forgotten">Did you forget your password?</string>
    <string name="login">Login</string>
    <string name="login_google">Login with Google</string>
    <string name="or">OR</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="ranking">Ranking</string>
    <string name="cover">cover</string>
    <string name="settings_description">Setting button</string>
    <string name="profile_description">Profile button</string>
    <string name="ranking_description">Scorebord button</string>
    <string name="close_description">Home button</string>
    <string name="play">Play</string>
    <string name="default_description">You have some questions, three lives and you have to reply within 30 seconds each question. Do your best!</string>
    <string name="default_title">Get Ready!</string>
    <string name="account">Account</string>
    <string name="change_password">Password</string>
    <string name="change_number">Phone number</string>
    <string name="mail">E-mail</string>
    <string name="question_text">Question text</string>
    <string name="default_countdown">00</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="time_out">Time expired</string>
    <string name="quit_game_description">Are you sure you want to quit?</string>
    <string name="quit_game">Exit</string>
    <string name="cancel_quit_game">Cancel</string>
    <string name="default_gameover">GameOver</string>
    <string name="back_home">Go back to the home page</string>

    <!--Categories-->
    <string name="general_knowledge">General Knowledge</string>
    <string name="books">Books</string>
    <string name="film">Film</string>
    <string name="music">Music</string>
    <string name="musical">Musical and Theatres</string>
    <string name="television">Television</string>
    <string name="video_games">VideoGames</string>
    <string name="board_games">BoardGames</string>
    <string name="science_nature">Science and nature</string>
    <string name="computers">Computers</string>
    <string name="mathematics">Mathematics</string>
    <string name="mythology">Mythology</string>
    <string name="sports">Sports</string>
    <string name="geography">Geography</string>
    <string name="history">History</string>
    <string name="politics">Politics</string>
    <string name="art">Art</string>
    <string name="celebrities">Celebrities</string>
    <string name="animals">Animals</string>
    <string name="vehicles">Vehicles</string>
    <string name="comics">Comics</string>
    <string name="gadgets">Gadgets</string>
    <string name="anime">Anime and Manga</string>
    <string name="cartoon">Cartoon and Animations</string>

    <string name="default_counter">Question 1</string>
    <string name="home">Home</string>
    <string name="home_swipe_warning">Swipe to change category</string>
    <string name="error_retrieving_news">There was an error retrieving the questions</string>
    <string name="wrong_answer">Wrong answer!</string>
    <string name="correct_answer">Correct answer!</string>
    <string name="time_expired">Time expired</string>
    <string name="next_question">Next question</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="signup">Signup</string>

    <!--Difficulty -->
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="random">Random</string>

    <!-- Errors -->
    <string name="error_email_login">Check the email address</string>
    <string name="error_password_login">The password must have at least 8 characters</string>
    <string name="error_retrieving_questions">There was an error retrieving the questions</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_collision_user">This email is already registered</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="already_registered">Already registered</string>
    <string name="sound">Sound:</string>
    <string name="off">OFF</string>
    <string name="volume">Volume:</string>
    <string name="day_night_mode">Day / Night mode</string>
    <string name="mode">Mode:</string>


    <string name="number_picker_description">Choose a number between 5 and 50</string>
    <string name="minus">–</string>
    <string name="plus">+</string>
    <string name="default_picker_value">10</string>
    <string name="default_difficulty_text_value">Swipe to pick difficulty</string>

    <string name="default_difficulty_question">Difficulty: random</string>
    <string name="all_categories">All Categories</string>

    <string name="correct_answer_description">Correct answer will be shown here.</string>
    <string name="dialog_question_description">The correct answer was:</string>
    <string name="score_description">Score:</string>

    <string name="username">USERNAME</string>

    <!--Connection Error Fragment-->
    <string name="connection_error">Connection Error</string>
    <string name="connection_error_description">Check your internet connection and try again</string>
    <string name="try_again">Try Again</string>
    <string name="close_app">Close app</string>
    <string name="top_accounts">Top Accounts</string>
    <string name="nome_account">Nome Account</string>
    <string name="account_statistics">Account Statistics</string>
    <string name="best_score">Best Score</string>
    <string name="favourites_catgories">Favourites Catgories</string>
    <string name="logout">Logout</string>
    <string name="off_on">OFF/ON</string>
    <string name="_0">0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="confirm">Confirm</string>
    <string name="choose_a_new_image">Choose a new image:</string>
    <string name="the_correct_answer_was">The correct answer was:</string>
    <string name="correct_answer_will_be_shown_here">Correct answer will be shown here.</string>
    <string name="on">ON</string>
    <string name="choose_your_icon_and_your_username">Choose your icon and your username</string>
</resources>