<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/md_theme_secondaryContainer"
    android:elevation="4dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_answer"
        android:textColor="@color/md_theme_onSecondaryContainer"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_gravity="center"
        android:layout_margin="30dp"/>



    <TextView
        android:id="@+id/dialog_question"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/md_theme_onSecondaryContainer"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:text="@string/the_correct_answer_was"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/correct_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_answer_will_be_shown_here"
        android:layout_gravity="center"
        android:textColor="@color/md_theme_onSecondaryContainer"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/next_question"
        android:layout_gravity="center"
        android:layout_margin="15dp"/>
</LinearLayout>