<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        app:srcCompat="@drawable/cover" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/md_theme_onSurface"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="10dp"
        android:text="@string/reg"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/md_theme_onSurface" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        style="@style/Widget.Design.TextInputLayout"
        android:background="@color/md_theme_secondaryContainer"
        android:textColorHint="@color/md_theme_onSecondaryContainer"
        app:startIconTint="@color/md_theme_onSecondaryContainer"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:startIconDrawable="@drawable/baseline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        style="@style/Widget.Design.TextInputLayout"
        android:background="@color/md_theme_secondaryContainer"
        android:textColorHint="@color/md_theme_onSecondaryContainer"
        app:startIconTint="@color/md_theme_onSecondaryContainer"
        android:layout_margin="10dp"
        app:startIconDrawable="@drawable/baseline_password_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="30dp"
        android:id = "@+id/loginButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_margin="5dp">


        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_toStartOf="@id/text_or"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            style="@style/Widget.Material3.MaterialDivider"
            android:background="@color/md_theme_onSurface"
            />


        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="@style/Widget.Material3.MaterialDivider"
            android:textColor="@color/md_theme_onSurface"
            android:text="@string/or"/>

        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_toEndOf="@id/text_or"
            android:layout_centerInParent="true"
            android:layout_marginStart="5dp"
            style="@style/Widget.Material3.MaterialDivider"
            android:background="@color/md_theme_onSurface"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/loginGoogleButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/login_google"
        app:icon="@drawable/google_icon_svgrepo_com"
        app:iconGravity="textStart"
        app:iconTint="@null"
        />

    <Button
        android:id="@+id/buttonNewAccount"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="0dp"
        android:text="@string/create_a_new_account"
        />
</LinearLayout>