<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_connection_error"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.connection.ConnectionErrorFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:text="@string/connection_error" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/connection_error_description" />

        <ImageView
            android:id="@+id/imageError"
            android:layout_width="match_parent"
            android:contentDescription="@string/connection_error"
            android:paddingTop="40dp"
            android:layout_height="550dp"
            android:src="@drawable/no_connection" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="40dp"
            android:paddingTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tryAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/try_again" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/closeApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_app" />

        </LinearLayout>


    </LinearLayout>
</FrameLayout>