<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.welcome.WelcomeActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/welcome"/>
    <Button
        android:id="@+id/alreadyRegistered"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/margin_medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/already_registered"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        style="@style/Widget.Design.TextInputLayout"
        android:background="@color/md_theme_secondaryContainer"
        android:textColorHint="@color/md_theme_onSecondaryContainer"
        app:startIconTint="@color/md_theme_onSecondaryContainer"
        app:startIconDrawable="@drawable/baseline_alternate_email_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        style="@style/Widget.Design.TextInputLayout"
        android:background="@color/md_theme_secondaryContainer"
        android:textColorHint="@color/md_theme_onSecondaryContainer"
        app:startIconTint="@color/md_theme_onSecondaryContainer"
        app:startIconDrawable="@drawable/baseline_password_24"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/signupButton"
        android:layout_marginTop="@dimen/margin_medium"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center"
        />
</LinearLayout>